; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/spgist/extr_spgkdtreeproc.c_getSide.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/spgist/extr_spgkdtreeproc.c_getSide.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, double }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (double, i32, %struct.TYPE_3__*)* @getSide to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getSide(double %0, i32 %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca double, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca double, align 8
  store double %0, double* %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load double, double* %13, align 8
  br label %19

15:                                               ; preds = %3
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load double, double* %17, align 8
  br label %19

19:                                               ; preds = %15, %11
  %20 = phi double [ %14, %11 ], [ %18, %15 ]
  store double %20, double* %8, align 8
  %21 = load double, double* %5, align 8
  %22 = load double, double* %8, align 8
  %23 = fcmp oeq double %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %31

25:                                               ; preds = %19
  %26 = load double, double* %5, align 8
  %27 = load double, double* %8, align 8
  %28 = fcmp ogt double %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 1, i32* %4, align 4
  br label %31

30:                                               ; preds = %25
  store i32 -1, i32* %4, align 4
  br label %31

31:                                               ; preds = %30, %29, %24
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
